kubernetes/kpt/home-assistant/home-assistant-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: "homeassistant/home-assistant:stable"
          imagePullPolicy: IfNotPresent
          ports:
            - name: api
              containerPort: 8123
              protocol: TCP
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: api
          #     scheme: HTTP
          #   initialDelaySeconds: 60
          #   failureThreshold: 5
          #   timeoutSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: api
          #     scheme: HTTP
          #   initialDelaySeconds: 60
          #   failureThreshold: 5
          #   timeoutSeconds: 10
          volumeMounts:
          - name: config
            mountPath: /config
          - name: recordings
            mountPath: /recordings
          securityContext:
            # fsGroup: 1000
            # runAsUser: 0
      volumes:
      - name: config
        nfs:
          server: gimli.home
          path: /appdata/home-assistant
      - name: recordings
        nfs:
          server: gimli.home
          path: /recordings
