kubernetes/kpt/home-assistant/home-assistant-service.yaml
---
# Source: home-assistant/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant  
  annotations:
    metallb.universe.tf/allow-shared-ip: home-assistant
spec:
  type: LoadBalancer
  ports:
    - name: api
      port: 80
      targetPort: 8123 
      protocol: TCP
  selector:
    app: home-assistant
