kubernetes/kpt/home-assistant/home-assistant-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: home-assistant-ingress
  namespace: home-assistant
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - home-assistant.lester.network
    secretName: home-assistant-tls
  rules:
  - host: home-assistant.lester.network
    http:
      paths:
      - path: /
        backend:
          serviceName: home-assistant
          servicePort: 80
